deployment/kubernetes/ingress.yaml
# Copyright 2020 Google LLC
#
# Use of this source code is governed by an MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT.
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: <PREFIX>-<ENV>
  annotations:
    kubernetes.io/ingress.global-static-ip-name: <PREFIX>-<ENV>-ingress-ip
    networking.gke.io/managed-certificates: <PREFIX>-<ENV>-cert-participants,<PREFIX>-<ENV>-cert-studies
spec:
  rules:
    - host: participants.<PREFIX>-<ENV>.<DOMAIN>
      http:
        paths:
          - path: /auth-server/*
            backend:
              serviceName: auth-server-np
              servicePort: 50000
          - path: /response-datastore/*
            backend:
              serviceName: response-datastore-np
              servicePort: 50000
          - path: /participant-user-datastore/*
            backend:
              serviceName: participant-user-datastore-np
              servicePort: 50000
          - path: /participant-consent-datastore/*
            backend:
              serviceName: participant-consent-datastore-np
              servicePort: 50000
          - path: /participant-enroll-datastore/*
            backend:
              serviceName: participant-enroll-datastore-np
              servicePort: 50000
          - path: /oauth2/*
            backend:
              serviceName: hydra-np
              servicePort: 50000
          - path: /participant-manager/*
            backend:
              serviceName: participant-manager-np
              servicePort: 50000
          - path: /participant-manager-datastore/*
            backend:
              serviceName: participant-manager-datastore-np
              servicePort: 50000
    - host: studies.<PREFIX>-ENV.<DOMAIN>
      http:
        paths:
          - path: /study-datastore/*
            backend:
              serviceName: study-datastore-np
              servicePort: 50000
          - path: /studybuilder/*
            backend:
              serviceName: study-builder-np
              servicePort: 50000
          - path: /study-resources/*
            backend:
              serviceName: study-builder-np
              servicePort: 50000
